# NSC

./: CMakeLists.txt  README.md  ipc_message_queue.cpp  ipc_message_queue.h
tests/: test_ipc_message_queue.cpp
